GNOME Bugzilla – Bug 729181
user-accounts: Don't leak DateTime instances
Last modified: 2014-05-16 10:03:28 UTC
Partially fallout from the header bars.
Created attachment 275419 [details] [review] user-accounts: Don't leak DateTime instances Before, we were freeing the DateTime instances when closing the dialog through the close button and always creating new ones on _show(). Now, with the header bar, we go through the delete-event handler which just hides the dialog, meaning that we leak the dates instanced on _show(). Clearing the dates on _show() is more robust anyway. Note that we'd leak even before switching to a header bar when going through the delete-event handler.
Review of attachment 275419 [details] [review]: ++
Attachment 275419 [details] pushed as 16cd01b - user-accounts: Don't leak DateTime instances