user-accounts: Don't leak DateTime instances

Before, we were freeing the DateTime instances when closing the dialog
through the close button and always creating new ones on _show().

Now, with the header bar, we go through the delete-event handler which
just hides the dialog, meaning that we leak the dates instanced on
_show().

Clearing the dates on _show() is more robust anyway. Note that we'd
leak even before switching to a header bar when going through the
delete-event handler.

https://bugzilla.gnome.org/show_bug.cgi?id=729181